cmake_minimum_required(VERSION 3.0)
project(sql_parser_proto)

set(CMAKE_CXX_STANDARD 20)

find_package(BISON)
find_package(FLEX)
if(BISON_FOUND AND FLEX_FOUND)
    message(STATUS "GNU Bison found")
    message(STATUS "Flex found")
    file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/interpreter)
    BISON_TARGET(MyParser parser.y ${CMAKE_CURRENT_BINARY_DIR}/interpreter/parser.tab.cc)
    FLEX_TARGET(MyScanner tokenizer.l ${CMAKE_CURRENT_BINARY_DIR}/interpreter/lex.yy.cc)
    ADD_FLEX_BISON_DEPENDENCY(MyScanner MyParser)
    include_directories("./")
    add_executable(sql_parser_proto main.cpp proto.cpp ${BISON_MyParser_OUTPUTS} ${FLEX_MyScanner_OUTPUTS})
else()
    message(FATAL_ERROR "GNU Bison or Flex not found. You need to install both of them.")
    # add_executable(sql_parser_proto main.cpp lex.yy.cc proto.cpp parser.tab.cc lex.yy.h)
endif()
